debezium/dbz#1938 Add ENABLE_CHRONICLE_QUEUE env var
Signed-off-by: Chris Cranford <chris@hibernate.org>